# quant-hack

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  MASTER_INDEX.md  QUICKSTART.md  README.md  SESSION_START.md  STRATEGY.md  WHY_12_MONTHS.md  perk.md  pyproject.toml  rules.md  run_full_pipeline.py  run_pipeline_json.py  run_v6_backtest.py
config/: example.yaml
data/: trade_state.db
data/models/: regime.pkl
data/models/aggregator/: meta_learner.pkl
docs/: AGENTS.md  ARCHITECTURE.md  PIPELINE.md  RESULTS.md
idea/: AGENTS.md  CLI.md  PLAN.md  README.md  brainstrom.md
idea/phases/: 00_setup.md  01_data.md  02_features.md  03_simulator.md  04_forecast.md  05_other_agents.md  06_aggregator_sizing.md  07_rl_execution.md  08_paper_trading.md  09_continual.md  10_live.md
models/transformer/20260623T132957Z/: config.json
scripts/: analyze_log.py  analyze_trades.py  analyze_trend.py  autonomous_llm_monitor.py  autonomous_trader.py  backtest_llm_monitor.py  calculate_live_score.py  check_all_pnl.py  close_all.py  close_position.py  competition_score_calculator.py  council_trader.py  daily_pnl.py  download_fast.py  download_hf_data.py  fetch_mt5_score.py  kronos_conflict_analysis.py  kronos_council_trader.py  kronos_full_trader.py  kronos_live_trader.py  kronos_llm_master_trader.py  kronos_real_predictor.py  llm_council_trader.py  monitor_dashboard.py  mt5_competition_score.py  multi_agent_trader.py  parse_trade_history.py  push_checkpoints_hf.py  push_weights.py  report_llm_inputs.py  run_backtest.py  run_live_trade.py  run_paper_trade.py  run_training.sh  simple_score_tracker.py  test_llm_review.py  test_mt5.py  test_stop_level.py  test_ws.py  trade_once.py  (+4 more)
src/intraday/: __init__.py  cli.py
src/intraday/agents/: __init__.py  base.py  cli.py  forecast.py  orderflow.py  regime.py  registry.py  risk.py  stay_out.py
src/intraday/aggregator/: __init__.py  cli.py  decision.py  features.py  meta_learner.py  sizing.py
src/intraday/backtest/: engine.py
src/intraday/data/: __init__.py  binance_bulk.py  capture.py  checkpoint.py  download.py  schemas.py
src/intraday/features/: __init__.py  batch_process.py  calculator.py  (+5 more)
tests/: __init__.py
tests/phase_01/: __init__.py  test_checkpoint.py  test_schemas.py
(+58 files in other folders)
